--- a/frontend/non members/contact-support.html
+++ b/frontend/non members/contact-support.html
@@ -301,11 +301,15 @@
         </ul>
       </div>
       <div class="usr-panel">
-        <button class="signup-btn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
+        <!-- Now has an ID -->
+        <button class="signup-btn" id="joinNowBtn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
         <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <a href="/non members/registration.html?tab=login">
+        <!-- User icon link now has an ID -->
+        <a id="userIconLink" href="/non members/registration.html?tab=login">
           <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
         </a>
+        <!-- Logout Button added here, initially hidden -->
+        <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
       </div>
     </nav>
 
@@ -317,15 +321,15 @@
         <form id="contactForm">
           <div class="form-group">
             <label>Full Name</label>
-            <input type="text" placeholder="Enter your full name" required />
+            <input type="text" name="fullName" placeholder="Enter your full name" required />
           </div>
           <div class="form-group">
             <label>Email</label>
-            <input type="email" placeholder="Enter your email" required />
+            <input type="email" name="email" placeholder="Enter your email" required />
           </div>
           <div class="form-group">
             <label>Issue Type</label>
-            <select required>
+            <select name="issueType" required>
               <option value="">Select an issue...</option>
               <option value="billing">Billing Issue</option>
               <option value="membership">Membership Problem</option>
@@ -336,7 +340,7 @@
           </div>
           <div class="form-group">
             <label>Describe Your Issue</label>
-            <textarea placeholder="Provide details about your issue..." required></textarea>
+            <textarea name="description" placeholder="Provide details about your issue..." required></textarea>
           </div>
           <div class="submit-container">
             <button type="submit">Submit Request</button>
@@ -366,12 +370,84 @@
 
     <!-- JavaScript for form submission handling -->
     <script>
-      document.getElementById("contactForm").addEventListener("submit", function(event) {
+      document.getElementById("contactForm").addEventListener("submit", async function(event) {
         event.preventDefault();
-        alert("Your support request has been submitted!");
-        // Redirect after submission (adjust this URL as needed)
-        window.location.href = "/index.html";
+
+        // Gather form data using name attributes
+        const fullName = event.target.fullName.value;
+        const email = event.target.email.value;
+        const issueType = event.target.issueType.value;
+        const description = event.target.description.value;
+
+        try {
+          const response = await fetch('/api/support', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ fullName, email, issueType, description })
+          });
+          
+          const result = await response.json();
+
+          if (response.ok && result.success) {
+            alert("Your support request has been submitted successfully!");
+            window.location.href = "/index.html"; // Redirect if needed
+          } else {
+            alert("Error: " + (result.error || "Failed to submit support request."));
+          }
+        } catch (error) {
+          console.error("Submission error:", error);
+          alert("An error occurred while submitting your support request.");
+        }
       });
+    </script>
+    <!-- SESSION LOGIC SCRIPT -->
+    <script>
+      (function() {
+        // Elements in the header
+        const joinNowBtn = document.getElementById("joinNowBtn");
+        const userIconLink = document.getElementById("userIconLink");
+        const logoutBtn = document.getElementById("logoutBtn");
+
+        // Check if user is logged in
+        const isLoggedIn = localStorage.getItem("loggedIn") === "true";
+
+        // Update UI based on login status:
+        if (isLoggedIn) {
+          // Hide "Join Now" button
+          joinNowBtn.style.display = "none";
+          // Show logout button
+          logoutBtn.style.display = "inline-block";
+          // Set user icon link to dashboard if logged in
+          userIconLink.href = "/Members/UserDashboard.html";
+        } else {
+          // Show "Join Now" button
+          joinNowBtn.style.display = "inline-block";
+          // Hide logout button
+          logoutBtn.style.display = "none";
+          // Set user icon link to login page if not logged in
+          userIconLink.href = "/non members/registration.html?tab=login";
+        }
+
+        // Logout logic
+        logoutBtn.addEventListener("click", async () => {
+          try {
+            const response = await fetch("/logout", {
+              method: "POST",
+              credentials: "include"
+            });
+            if (response.ok) {
+              localStorage.removeItem("loggedIn");
+              alert("Logged out successfully!");
+              // Redirect to login page after logout
+              window.location.href = "/non members/registration.html?tab=login";
+            } else {
+              alert("Logout failed.");
+            }
+          } catch (error) {
+            console.error("Error during logout:", error);
+          }
+        });
+      })();
     </script>
   </body>
 </html>
