--- a/frontend/non members/creative-workspace-membership.html
+++ b/frontend/non members/creative-workspace-membership.html
@@ -2,7 +2,7 @@
 <html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creative Workspace Membership</title>
     <!-- Link to global CSS (served from root) -->
     <link rel="stylesheet" href="/css/styles.css" />
@@ -80,7 +80,7 @@
         min-width: 160px;
         border-radius: 8px;
         margin-top: 0.5rem;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         padding: 0.75rem 0;
         transform: translateY(-10px);
         transition: opacity 0.2s ease, transform 0.2s ease;
@@ -105,6 +105,7 @@
         pointer-events: auto;
         transform: translateY(0);
       }
+
       /* ========== MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP ========== */
       .membership-main {
         margin-top: 80px;
@@ -217,6 +218,7 @@
       .cta-button:hover {
         background-color: #555;
       }
+
       /* ========== FOOTER ========== */
       footer {
         background-color: #0f0f0f;
@@ -267,6 +269,7 @@
         width: 150px;
         height: auto;
       }
+
       /* ========== RESPONSIVE ========== */
       @media (max-width: 1024px) {
         .membership-layout {
@@ -288,12 +291,10 @@
     <!-- HEADER -->
     <nav class="navbar">
       <div class="nav-header">
-        <!-- Updated image path (served from root) -->
         <img src="/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
       </div>
       <div class="nav-links">
         <ul>
-          <!-- Updated navigation links -->
           <li><a href="/index.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
@@ -309,12 +310,17 @@
         </ul>
       </div>
       <div class="usr-panel">
-        <!-- Updated registration links -->
-        <button class="signup-btn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
+        <!-- Join Now & User Icon: Visible if not logged in -->
+        <button class="signup-btn" id="joinNowBtn" onclick="location.href='/non members/registration.html?tab=signup'">
+          Join Now
+        </button>
         <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <a href="/non members/registration.html?tab=login">
-          <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <!-- Single user icon with dynamic link -->
+        <a id="userIconLink">
+          <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
         </a>
+        <!-- Logout Button (shown if logged in) -->
+        <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
       </div>
     </nav>
 
@@ -353,7 +359,6 @@
                 + £100 joining fee
               </p>
             </div>
-            <!-- Updated CTA button link -->
             <a href="/non members/member application.html" class="cta-button">
               Become a Creative Workspace Member
             </a>
@@ -374,5 +379,54 @@
         </div>
       </div>
     </footer>
+
+ <!-- SESSION LOGIC SCRIPT -->
+ <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    // Elements in the header
+    const joinNowBtn = document.getElementById("joinNowBtn");
+    const userIconLink = document.getElementById("userIconLink");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    // Check if user is logged in
+    const isLoggedIn = localStorage.getItem("loggedIn") === "true";
+
+    // Update UI based on login status:
+    if (isLoggedIn) {
+      // Hide "Join Now" button
+      joinNowBtn.style.display = "none";
+      // Show logout button
+      logoutBtn.style.display = "inline-block";
+      // Set user icon link to dashboard if logged in
+      userIconLink.href = "/Members/UserDashboard.html";
+    } else {
+      // Show "Join Now" button
+      joinNowBtn.style.display = "inline-block";
+      // Hide logout button
+      logoutBtn.style.display = "none";
+      // Set user icon link to login page if not logged in
+      userIconLink.href = "/non members/registration.html?tab=login";
+    }
+
+    // Logout logic
+    logoutBtn.addEventListener("click", async () => {
+      try {
+        const response = await fetch("/logout", {
+          method: "POST",
+          credentials: "include"
+        });
+        if (response.ok) {
+          localStorage.removeItem("loggedIn");
+          alert("Logged out successfully!");
+          window.location.href = "/non members/registration.html?tab=login";
+        } else {
+          alert("Logout failed.");
+        }
+      } catch (error) {
+        console.error("Error during logout:", error);
+      }
+    });
+  });
+</script>
   </body>
 </html>
