--- a/frontend/non members/key-access-membership.html
+++ b/frontend/non members/key-access-membership.html
@@ -105,7 +105,7 @@
         pointer-events: auto;
         transform: translateY(0);
       }
-
+      
       /* ========== MAIN CONTENT: KEY ACCESS MEMBERSHIP BODY ========== */
       .membership-main {
         margin-top: 80px; /* offset for fixed header */
@@ -218,7 +218,6 @@
       .cta-button:hover {
         background-color: #555;
       }
-
       /* ========== FOOTER ========== */
       footer {
         background-color: #0f0f0f;
@@ -290,7 +289,6 @@
     <!-- HEADER -->
     <nav class="navbar">
       <div class="nav-header">
-        <!-- Updated image path -->
         <img src="/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
       </div>
       <div class="nav-links">
@@ -310,12 +308,17 @@
         </ul>
       </div>
       <div class="usr-panel">
-        <!-- Updated registration links -->
-        <button class="signup-btn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
+        <!-- Dynamic header elements -->
+        <button class="signup-btn" id="joinNowBtn" onclick="location.href='/non members/registration.html?tab=signup'">
+          Join Now
+        </button>
         <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <a href="/non members/registration.html?tab=login">
-          <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <!-- Single user icon with dynamic link -->
+        <a id="userIconLink" href="/non members/registration.html?tab=login">
+          <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
         </a>
+        <!-- Logout Button (shown if logged in) -->
+        <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
       </div>
     </nav>
 
@@ -349,7 +352,6 @@
               <p class="price-title">Monthly Cost</p>
               <p class="price-amount">£75 per month<br />+ £100 joining fee</p>
             </div>
-            <!-- Updated CTA button (link without /frontend prefix) -->
             <a href="/non members/member application.html" class="cta-button">
               Join the Key Access Membership
             </a>
@@ -370,5 +372,54 @@
         </div>
       </div>
     </footer>
+     
+    <!-- SESSION LOGIC SCRIPT -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        // Elements in the header
+        const joinNowBtn = document.getElementById("joinNowBtn");
+        const userIconLink = document.getElementById("userIconLink");
+        const logoutBtn = document.getElementById("logoutBtn");
+
+        // Check if user is logged in
+        const isLoggedIn = localStorage.getItem("loggedIn") === "true";
+
+        // Update UI based on login status:
+        if (isLoggedIn) {
+          // Hide "Join Now" button
+          joinNowBtn.style.display = "none";
+          // Show logout button
+          logoutBtn.style.display = "inline-block";
+          // Set user icon link to dashboard if logged in
+          userIconLink.href = "/Members/UserDashboard.html";
+        } else {
+          // Show "Join Now" button
+          joinNowBtn.style.display = "inline-block";
+          // Hide logout button
+          logoutBtn.style.display = "none";
+          // Set user icon link to login page if not logged in
+          userIconLink.href = "/non members/registration.html?tab=login";
+        }
+
+        // Logout logic
+        logoutBtn.addEventListener("click", async () => {
+          try {
+            const response = await fetch("/logout", {
+              method: "POST",
+              credentials: "include"
+            });
+            if (response.ok) {
+              localStorage.removeItem("loggedIn");
+              alert("Logged out successfully!");
+              window.location.href = "/non members/registration.html?tab=login";
+            } else {
+              alert("Logout failed.");
+            }
+          } catch (error) {
+            console.error("Error during logout:", error);
+          }
+        });
+      });
+    </script>
   </body>
 </html>
