--- a/frontend/non members/non-member-page.html
+++ b/frontend/non members/non-member-page.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Memberships</title>
 
-    <!-- Link to global CSS file (note: no "/frontend" prefix) -->
     <link rel="stylesheet" href="/css/styles.css" />
-
-    <!-- Page-specific / merged CSS -->
     <style>
       /* ========== BASIC RESET ========== */
       * {
@@ -17,7 +14,6 @@
         box-sizing: border-box;
         font-family: Arial, sans-serif;
       }
-
       /* ========== NAVBAR CONTAINER ========== */
       .navbar {
         background-color: #fe1e3c;
@@ -32,16 +28,12 @@
         font-weight: 200;
         z-index: 1000;
       }
-
-      /* LEFT: LOGO */
       .nav-header img {
         height: 50px;
         width: auto;
       }
-
-      /* CENTER: NAV LINKS */
       .nav-links {
-        margin: 0 auto; /* center the nav list */
+        margin: 0 auto;
       }
       .nav-links ul {
         list-style: none;
@@ -53,15 +45,11 @@
         color: #fff;
         font-size: 1rem;
       }
-
-      /* RIGHT: SIGN UP + ICONS */
       .usr-panel {
         display: flex;
         align-items: center;
         gap: 1rem;
       }
-
-      /* SIGNUP BUTTON (GRADIENT) */
       .signup-btn {
         background: linear-gradient(to right, #ff416c, #ff4b2b);
         color: #fff;
@@ -77,7 +65,6 @@
         background: linear-gradient(to right, #ff4b2b, #ff416c);
         transform: scale(1.05);
       }
-
       /* ========== DROPDOWN MENU ========== */
       .dropdown {
         position: relative;
@@ -118,10 +105,9 @@
         pointer-events: auto;
         transform: translateY(0);
       }
-
       /* ========== MAIN CONTENT (MEMBERSHIPS) ========== */
       .all-memberships-main {
-        margin-top: 80px; /* offset for navbar height */
+        margin-top: 80px;
         padding: 2rem;
         background: #fff;
       }
@@ -136,8 +122,6 @@
         margin: 0 auto;
         gap: 2rem;
       }
-
-      /* LEFT INFO (BIG TITLE) */
       .left-info {
         flex: 1;
       }
@@ -159,8 +143,6 @@
         text-transform: uppercase;
         line-height: 1.2;
       }
-
-      /* MIDDLE RED CARD */
       .membership-card {
         background-color: #d0021b;
         color: #fff;
@@ -196,8 +178,6 @@
         font-weight: bold;
         transform: translateX(-20px);
       }
-
-      /* RIGHT COST & CTA */
       .membership-cost {
         flex: 1;
         text-align: center;
@@ -233,8 +213,6 @@
       .cta-button:hover {
         background-color: #555;
       }
-
-      /* Extra note for workspace membership */
       .apply-note {
         max-width: 1200px;
         margin: 1rem auto 0 auto;
@@ -243,8 +221,6 @@
         font-size: 1rem;
         font-style: italic;
       }
-
-      /* Hardship Notice + Free Membership Button */
       .hardship-notice {
         max-width: 1200px;
         margin: 2rem auto;
@@ -273,8 +249,6 @@
       .free-membership-btn:hover {
         background-color: #555;
       }
-
-      /* FOOTER layout */
       footer {
         background-color: #0f0f0f;
         color: whitesmoke;
@@ -324,8 +298,6 @@
         height: auto;
         width: 150px;
       }
-
-      /* RESPONSIVE ADJUSTMENTS */
       @media (max-width: 1024px) {
         .membership-layout {
           flex-direction: column;
@@ -348,10 +320,7 @@
     <nav class="navbar">
       <!-- Left: Logo -->
       <div class="nav-header">
-        <img
-          src="/images/TC_Logos-01.png"
-          alt="Together Culture Cambridge Logo"
-        />
+        <img src="/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
       </div>
 
       <!-- Center: Nav Links -->
@@ -374,11 +343,19 @@
 
       <!-- Right: Sign Up + Icons -->
       <div class="usr-panel">
-        <button class="signup-btn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
+        <!-- Add ID here so script can find it -->
+        <button class="signup-btn" id="joinNowBtn" onclick="location.href='/non members/registration.html?tab=signup'">
+          Join Now
+        </button>
         <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <a href="/non members/registration.html?tab=login">
+        <!-- Add ID for userIconLink -->
+        <a id="userIconLink" href="/non members/registration.html?tab=login">
           <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
         </a>
+        <!-- Add a logout button with the same ID used in the script -->
+        <button class="signup-btn" id="logoutBtn" style="display: none;">
+          Logout
+        </button>
       </div>
     </nav>
 
@@ -420,7 +397,6 @@
               <p class="price-title">Monthly Cost</p>
               <p class="price-amount">£18.50 per month</p>
             </div>
-            <!-- Link to membership application page (no /frontend prefix) -->
             <a href="/non members/member application.html" class="cta-button">
               Join the Community Membership
             </a>
@@ -553,5 +529,55 @@
         </div>
       </div>
     </footer>
+
+    <!-- SESSION LOGIC SCRIPT -->
+    <script>
+      (function() {
+        // Elements in the header
+        const joinNowBtn = document.getElementById("joinNowBtn");
+        const userIconLink = document.getElementById("userIconLink");
+        const logoutBtn = document.getElementById("logoutBtn");
+
+        // Check if user is logged in
+        const isLoggedIn = localStorage.getItem("loggedIn") === "true";
+
+        // Update UI based on login status:
+        if (isLoggedIn) {
+          // Hide "Join Now" button
+          joinNowBtn.style.display = "none";
+          // Show logout button
+          logoutBtn.style.display = "inline-block";
+          // Set user icon link to dashboard if logged in
+          userIconLink.href = "/Members/UserDashboard.html";
+        } else {
+          // Show "Join Now" button
+          joinNowBtn.style.display = "inline-block";
+          // Hide logout button
+          logoutBtn.style.display = "none";
+          // Set user icon link to login page if not logged in
+          userIconLink.href = "/non members/registration.html?tab=login";
+        }
+
+        // Logout logic
+        logoutBtn.addEventListener("click", async () => {
+          try {
+            const response = await fetch("/logout", {
+              method: "POST",
+              credentials: "include"
+            });
+            if (response.ok) {
+              localStorage.removeItem("loggedIn");
+              alert("Logged out successfully!");
+              // Redirect to login page after logout
+              window.location.href = "/non members/registration.html?tab=login";
+            } else {
+              alert("Logout failed.");
+            }
+          } catch (error) {
+            console.error("Error during logout:", error);
+          }
+        });
+      })();
+    </script>
   </body>
 </html>
