Final Schema information

--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -1,3 +1,6 @@
+<!-- TODO when clicking calendar, goes to calendar page, with and the button allows the user to click join event and you get added to the events-->
+
+
 <!DOCTYPE html>
 <html lang="en" class="light">
   <head>
