phone logic updated as well as join event

--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -265,6 +265,7 @@
           <li><a href="">Chat</a></li>
           <li><a href="UserDigitalContent.html">Digital Content</a></li>
           <li><a href="Settings.html">Settings</a></li>
+          <li><a href="/non members/events.html">Events</a></li>
         </ul>
       </div>
       <div class="usr-panel">
