--- a/frontend/admin/event.html
+++ b/frontend/admin/event.html
@@ -20,6 +20,7 @@
           <li><a href="#">About</a></li>
           <li><a href="./member.html">Memberships</a></li>
           <li><a href="/frontend/non members/contact-support.html">Contact</a></li>
+          <li><a href="/frontend/non members/events.html">Events</a></li>
         </ul>
       </div>
       <div class="usr-panel">
