--- a/frontend/non members/events.html
+++ b/frontend/non members/events.html
@@ -321,11 +321,9 @@
       <div class="usr-panel">
         <button class="signup-btn" id="joinNowBtn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
         <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <!-- Renamed ID to match membership logic -->
         <a href="/non members/registration.html?tab=login" id="userIconLink">
           <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
         </a>
-        <!-- Logout Button (hidden by default if not logged in) -->
         <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
       </div>
     </nav>
@@ -549,6 +547,9 @@
 
     <!-- Inline JavaScript -->
     <script>
+      // ================== BACKEND URL LOGIC ==================
+      const backendURL = window.location.port === '5000' ? '' : 'http://127.0.0.1:5000';
+
       // ================== Filter and Calendar Toggle Logic ==================
       const filterButtons = document.querySelectorAll(".filter-btn");
       const eventCards = document.querySelectorAll(".event-card");
@@ -587,10 +588,20 @@
       // ================== Join Event Function ==================
       async function joinEvent(eventId) {
         try {
-          const response = await fetch(`/events/${eventId}/join`, {
+          // Retrieve userId from localStorage
+          const userId = localStorage.getItem("userId");
+          // If no userId is found, user is effectively not identified
+          if (!userId) {
+            alert("Please log in to join the event.");
+            return;
+          }
+
+          // Existing code: we do not remove anything, just add userId to the request body
+          const response = await fetch(`${backendURL}/events/${eventId}/join`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ eventId })
+            // We add userId to the existing eventId body
+            body: JSON.stringify({ eventId, userId })
           });
           if (response.ok) {
             alert("Successfully joined the event!");
@@ -604,19 +615,9 @@
         }
       }
 
-      /*
-      // Commented out to match membership logic (no forced redirect on page load):
-      (function checkSession() {
-        if (localStorage.getItem("loggedIn") !== "true") {
-          window.location.href = "/non members/registration.html?tab=login";
-        }
-      })();
-      */
-
       // Show/hide header elements based on login
       const logoutBtn = document.getElementById("logoutBtn");
       const joinNowBtn = document.getElementById("joinNowBtn");
-      // Renamed from guestIconLink to userIconLink:
       const userIconLink = document.getElementById("userIconLink");
 
       function updateUIBasedOnLogin() {
@@ -624,12 +625,10 @@
         if (isLoggedIn) {
           joinNowBtn.style.display = "none";
           logoutBtn.style.display = "inline-block";
-          // If logged in, point user icon to the member dashboard:
           userIconLink.href = "/Members/UserDashboard.html";
         } else {
           joinNowBtn.style.display = "inline-block";
           logoutBtn.style.display = "none";
-          // If not logged in, point user icon to the login page:
           userIconLink.href = "/non members/registration.html?tab=login";
         }
       }
@@ -638,14 +637,15 @@
       // Logout button event listener
       logoutBtn.addEventListener("click", async () => {
         try {
-          const response = await fetch('/logout', {
+          const response = await fetch(`${backendURL}/logout`, {
             method: 'POST',
             credentials: 'include'
           });
           if (response.ok) {
             localStorage.removeItem("loggedIn");
+            // Also remove userId to ensure joinEvent won't proceed
+            localStorage.removeItem("userId");
             alert("Logged out successfully!");
-            // Redirect to login page, matching membership logic:
             window.location.href = "/non members/registration.html?tab=login";
           } else {
             alert("Logout failed.");
@@ -659,24 +659,39 @@
       // If your backend serves a JSON list of events at /api/events, we can load them here:
       window.addEventListener("DOMContentLoaded", async () => {
         try {
-          const response = await fetch("/api/events");
+          const response = await fetch(`${backendURL}/api/events`);
           if (!response.ok) {
             throw new Error("Failed to fetch events");
           }
           const eventsData = await response.json();
           const eventsGrid = document.querySelector(".events-grid");
           eventsGrid.innerHTML = "";
+
           eventsData.forEach(event => {
+            // Fallback category for filter if not present in DB:
+            const category = "all"; 
+            // Fallback image for now:
+            const imageURL = "/images/eventPlaceholder.jpg";
+
+            // Convert start_date/end_date if they exist
+            const dateString = (event.start_date && event.end_date)
+              ? `${event.start_date} - ${event.end_date}`
+              : (event.start_date || "TBD");
+
+            const timeString = (event.start_time && event.end_time)
+              ? `${event.start_time} - ${event.end_time}`
+              : "All day";
+
             const card = document.createElement("div");
             card.className = "event-card";
-            card.setAttribute("data-category", event.category || "all");
+            card.setAttribute("data-category", category);
             card.innerHTML = `
-              <img src="${event.image_path}" alt="${event.title}" />
+              <img src="${imageURL}" alt="${event.title}" />
               <div class="event-details">
                 <h2>${event.title}</h2>
-                <p><strong>Date:</strong> ${event.event_date}</p>
-                <p><strong>Location:</strong> ${event.location}</p>
-                <p>${event.description}</p>
+                <p><strong>Date:</strong> ${dateString}</p>
+                <p><strong>Time:</strong> ${timeString}</p>
+                <p>${event.description || "No description provided."}</p>
                 <button class="event-btn" onclick="joinEvent(${event.event_id})">Join event</button>
               </div>
             `;
@@ -687,49 +702,5 @@
         }
       });
     </script>
-    <!-- SESSION LOGIC SCRIPT (Commented out to avoid duplication/conflict) -->
-    <!--
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Elements in the header
-        const joinNowBtn = document.getElementById("joinNowBtn");
-        const userIconLink = document.getElementById("userIconLink");
-        const logoutBtn = document.getElementById("logoutBtn");
-
-        // Check if user is logged in
-        const isLoggedIn = localStorage.getItem("loggedIn") === "true";
-
-        // Update UI based on login status:
-        if (isLoggedIn) {
-          joinNowBtn.style.display = "none";
-          logoutBtn.style.display = "inline-block";
-          userIconLink.href = "/Members/UserDashboard.html";
-        } else {
-          joinNowBtn.style.display = "inline-block";
-          logoutBtn.style.display = "none";
-          userIconLink.href = "/non members/registration.html?tab=login";
-        }
-
-        // Logout logic
-        logoutBtn.addEventListener("click", async () => {
-          try {
-            const response = await fetch("/logout", {
-              method: "POST",
-              credentials: "include"
-            });
-            if (response.ok) {
-              localStorage.removeItem("loggedIn");
-              alert("Logged out successfully!");
-              window.location.href = "/non members/registration.html?tab=login";
-            } else {
-              alert("Logout failed.");
-            }
-          } catch (error) {
-            console.error("Error during logout:", error);
-          }
-        });
-      });
-    </script>
-    -->
   </body>
 </html>
