--- a/frontend/non members/registration.html
+++ b/frontend/non members/registration.html
@@ -295,7 +295,8 @@
           </div>
           <div class="form-group">
             <label for="signup-phone">Phone Number</label>
-            <input type="tel" id="signup-phone" name="phone" placeholder="123-456-7890" required />
+            <!-- Using type="number" to restrict input and ensure only digits -->
+            <input type="number" id="signup-phone" name="phone" placeholder="Enter phone number" required min="0" step="1" />
           </div>
           <div class="form-group">
             <label for="signup-password">Password</label>
@@ -338,7 +339,7 @@
 
     <!-- ========== SCRIPTS ========== -->
     <script>
-      // ========== SHOW/HIDE FORMS ==========
+      // ================== SHOW/HIDE FORMS ========== 
       const signUpBtn = document.getElementById("signUpBtn");
       const loginBtn = document.getElementById("loginBtn");
       const signUpForm = document.getElementById("signUpForm");
@@ -368,10 +369,7 @@
         showSignUp();
       }
 
-      // ========== SESSION MANAGEMENT (FRONT-END EXAMPLE) ==========
-      // We'll store a simple "loggedIn" flag in localStorage for demonstration.
-      // Also store "userRole" to check if admin or not.
-
+      // ================== SESSION MANAGEMENT (FRONT-END EXAMPLE) ==========
       const backendURL = window.location.port === '5000' ? '' : 'http://127.0.0.1:5000';
       const logoutBtn = document.getElementById("logoutBtn");
       const joinNowBtn = document.getElementById("joinNowBtn");
@@ -379,13 +377,9 @@
 
       function updateUIBasedOnLogin() {
         const isLoggedIn = localStorage.getItem("loggedIn") === "true";
-
         if (isLoggedIn) {
-          // Hide "Join Now" button
           joinNowBtn.style.display = "none";
-          // Show logout button
           logoutBtn.style.display = "inline-block";
-          // If logged in, user icon goes to Dashboard (or Admin if userRole=admin)
           const userRole = localStorage.getItem("userRole");
           if (userRole === "admin") {
             userIconLink.href = "/admin/member.html";
@@ -393,17 +387,14 @@
             userIconLink.href = "/Members/UserDashboard.html";
           }
         } else {
-          // Show "Join Now" button
           joinNowBtn.style.display = "inline-block";
-          // Hide logout button
           logoutBtn.style.display = "none";
-          // If not logged in, user icon goes to login page
           userIconLink.href = "/non members/registration.html?tab=login";
         }
       }
       updateUIBasedOnLogin();
 
-      // ========== SIGN UP FORM SUBMIT ==========
+      // ================== SIGN UP FORM SUBMIT ==========
       signUpForm.addEventListener("submit", async function(event) {
         event.preventDefault();
         const fullName = document.getElementById("signup-name").value.trim();
@@ -420,9 +411,16 @@
           alert("Passwords do not match!");
           return;
         }
+        // Extra check to ensure phone contains only digits
+        const phoneRegex = /^\d+$/;
+        if (!phoneRegex.test(phone)) {
+          alert("Phone number must contain digits only.");
+          return;
+        }
 
         try {
-          const response = await fetch(`${backendURL}/signup`, {
+          // Call /user/signup because the registration route is mounted under /user
+          const response = await fetch(`${backendURL}/user/signup`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ fullName, email, phone, password })
@@ -440,7 +438,7 @@
         }
       });
 
-      // ========== LOG IN FORM SUBMIT ==========
+      // ================== LOG IN FORM SUBMIT ==========
       loginForm.addEventListener("submit", async function(event) {
         event.preventDefault();
         const email = document.getElementById("login-email").value.trim();
@@ -454,16 +452,13 @@
           const response = await fetch(`${backendURL}/login`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            credentials: "include", // Ensures session cookie is sent
+            credentials: "include",
             body: JSON.stringify({ email, password })
           });
           const data = await response.json();
-
           if (response.ok) {
-            // Mark user as logged in
             localStorage.setItem("loggedIn", "true");
-
-            // Check if admin
+            localStorage.setItem("userId", data.userId); // Store the userId for join events
             if (data.role === "admin") {
               localStorage.setItem("userRole", "admin");
               alert("Hello admin!");
@@ -482,19 +477,19 @@
         }
       });
 
-      // ========== LOGOUT BUTTON ==========
+      // ================== LOGOUT BUTTON ==========
       logoutBtn.addEventListener("click", async () => {
         try {
           const response = await fetch(`${backendURL}/logout`, {
             method: "POST",
-            credentials: "include" // Ensures session cookie is sent
+            credentials: "include"
           });
           if (response.ok) {
             localStorage.removeItem("loggedIn");
             localStorage.removeItem("userRole");
+            localStorage.removeItem("userId"); // Remove userId on logout
             alert("Logged out successfully!");
             updateUIBasedOnLogin();
-            // Optionally redirect or reload
             window.location.href = "/non members/registration.html?tab=login";
           } else {
             alert("Logout failed.");
