added logout function to make it more orgnized to use. added minor changes to other parts to fix routing

--- a/frontend/Members/Settings.html
+++ b/frontend/Members/Settings.html
@@ -590,4 +590,6 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
    
   </body>
   <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js'></script>
+  <script src = "../js/logoutFunction.js"></script>
+
 </html>
